Fixed map z-index

--- a/public/sass/modules/_map.sass
+++ b/public/sass/modules/_map.sass
@@ -2,4 +2,4 @@
   width: 770px
   height: 481px
   position: relative
-  z-index: 99999
+  z-index: 100
