--- a/public/sass/modules/_navbar.sass
+++ b/public/sass/modules/_navbar.sass
@@ -1,7 +1,7 @@
 @media only screen and (min-device-width: 1024px)
   .nav-container
     position: relative
-    z-index: 5
+    z-index: 150
 
 
   .flex-nav
@@ -36,12 +36,14 @@
   #logo
     height: 14em
     width: 14em
+    position: relative
+    z-index: 150
 
   .logo__box
 
     border-radius: 50%
-    height: 11em
-    width: 11.7em
+    height: 12em
+    width: 14em
     box-shadow: 0px 35px 15px #323232
     padding: 0px 0px 0px 0px
     color: white
@@ -49,6 +51,8 @@
     display: flex
     justify-content: center
     align-content: center
+    position: relative
+    z-index: 150
 
   .flex-ul
     background-image: url('../../img/textures/wood2.png')
